2009-07-05 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTableView.m (_editPreviousEditableCellBeforeRow:column:):
	Compare row against _numberOfRows not _numberOfColumns.
	Patch by Tim Schmielau <tim@smmo.org>.

2009-06-30 Nicolas Roard <nicolas@roard.com>

	* Source/NSTableHeaderView.m: Apply patch from Eric
	Wasylishen <ewasylishen@gmail.com>, add live resize and
	live moving for table columns if GSUseGhostResize is
	set to NO.

2009-06-28 23:46-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSTextView.m (-initWithCoder:): Retain the text 
	container and storage to prevent a crash since both are 
	autoreleased by the archiver.

2009-06-29 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSKeyValueBinding.h,
	* Source/externs.m: Add NSContentObjectBinding.
	* Source/NSObjectController.m: Add more implementation to this
	class.
	Patch by Andy Balholm <andy@balholm.com>.

2009-06-28 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/AppKit.h : Addd NSFontDescriptor.h.

2009-06-22 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSUserDefaultsController.m (-initWithCoder:): Retain the
	shared controller before returning it.

2009-06-22 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSKeyValueBinding.m (GSKeyValueBinding+initialize):
	Correc the setup of the map tables.
	* Source/NSKeyValueBinding.m (GSKeyValueBinding+unbindAllForObject):
	Use a copy of the keys for the enumerator.

2009-06-05 18:21-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/AppKit/NSSpeechSynthesizer.h: 
	* Source/NSSpeechSynthesizer.m: Implementation of
	NSSpeechSynthesizer.  
	Patch by David Chisnall <theraven@sucs.org>

2009-06-02 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSDocument.m (-runModalSavePanelForSaveOperation:...): 
	Check whether there is a returned save panel, this wont be the case
	when the user cancels the save operation.
	
2009-05-31 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSApplication.m (detachDrawingThread:toTarget:withObject:): 