@@ -1,3 +1,8 @@
+2009-07-05 Riccardo Mottola <rmottola@users.sf.net>
+
+	* Source/NSTableHeaderView.m
+	Removed c99-ism
+
 2009-07-05 Fred Kiefer <FredKiefer@gmx.de>
 
 	* Source/NSTableView.m (_editPreviousEditableCellBeforeRow:column:):
